// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser primary expressions parses expressions in parentheses 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 1,
        },
      },
      "right": Grouping {
        "expression": Binary {
          "left": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 2,
            },
          },
          "right": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
          "token": {
            "isReserved": false,
            "kind": "Star",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "*",
          },
        },
        "tokens": {
          "left": {
            "isReserved": false,
            "kind": "LeftParen",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "(",
          },
          "right": {
            "isReserved": false,
            "kind": "RightParen",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": ")",
          },
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Plus",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "+",
      },
    },
  },
]
`;

exports[`parser primary expressions parses numeric literals 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": Int32 {
        "inArray": false,
        "kind": 4,
        "value": 5,
      },
    },
  },
]
`;

exports[`parser primary expressions parses string literals 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": BrsString {
        "inArray": false,
        "kind": 3,
        "value": "hello",
      },
    },
  },
]
`;
